Wed Jul 04 10:09:33 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* api/valuerangeproc.cc: Change encoding used for doubles to a much
	  more compact scheme, and add support for +-INFINITY.  Also, some
	  other tweaks to avoid unneccessary computation.
	* tests/queryparsertest.cc: Update test cases to expect new
	  encoding of doubles, and add values for INFINITY and DBL_MAX and
	  some other special numbers to the list of numbers that are
	  specifically checked.

Wed Jul 04 03:29:10 BST 2007  Olly Betts <olly@survex.com>

	* api/matchspy.cc,include/xapian/matchspy.h,tests/api_wrdb.cc:
	  Category score now explicitly weights for having nearer the
	  requested number of categories.  Category score is now normalised
	  so values should be roughly comparable between different sized
	  collections.  Add untested code to build ranges.

Wed Jul 04 00:48:07 BST 2007  Olly Betts <olly@survex.com>

	* bin/xapian-compact.cc: Add new "--no-renumber" option to preserve
	  document ids from source databases.  Fix bug in change to add
	  support for spelling and synonym tables which was preventing any
	  renumbering from happening!

Wed Jul 04 00:25:52 BST 2007  Olly Betts <olly@survex.com>

	* backends/inmemory/inmemory_database.cc,
	  backends/inmemory/inmemory_database.h,tests/api_wrdb.cc: Fix bug in
	  inmemory backend - using replace_document() to add a document with a
	  specific document id above the highest currently used would create
	  empty documents for all document ids in between.

Tue Jul 03 09:27:36 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* HACKING: Add note that protection level declarations in classes
	  and structs should only be indented by 2 spaces.

Tue Jul 03 03:53:11 BST 2007  Olly Betts <olly@survex.com>

	* api/Makefile.mk,api/matchspy.cc,include/xapian/matchspy.h,
	  tests/api_wrdb.cc: Add MatchSpy method to score how good a
	  categorisation is.

Tue Jul 03 01:24:19 BST 2007  Olly Betts <olly@survex.com>
