@@ -1,3 +1,11 @@
+Wed Jul 04 12:25:15 BST 2007  Richard Boulton <richard@lemurconsulting.com>
+
+	* api/valuerangeproc.cc: Fix encoding of extremely large, negative,
+	  non-IEEE representation to be -INFINITY, not +INFINITY.  Thanks
+	  to Simon Tatham for pointing this out.
+	* include/xapian/queryparser.h: Add a documentation comment note
+	  that zero and -zero will be transfored to the same value.
+
 Wed Jul 04 10:09:33 BST 2007  Richard Boulton <richard@lemurconsulting.com>
 
 	* api/valuerangeproc.cc: Change encoding used for doubles to a much
